--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,31 +30,75 @@
             app:tabPaddingBottom="8dp">
         </com.google.android.material.tabs.TabLayout>
 
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/coordinator"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tabLayout">
+            app:layout_constraintTop_toBottomOf="@id/tabLayout"
+            android:layout_height="0dp">
 
-        </androidx.viewpager2.widget.ViewPager2>
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appbar_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btnfab_options"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_gravity="end|bottom"
-            android:layout_margin="16dp"
-            android:elevation="6dp"
-            android:backgroundTint="@color/colorAccent"
-            android:contentDescription="@string/btn_options"
-            android:tint="@color/colorText"
-            app:tint="@color/colorText"
-            android:src="@drawable/ic_options"
-            app:backgroundTint="@color/colorAccent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+                <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:id="@+id/collapsing_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:contentScrim="@color/colorPrimaryLight"
+                    app:layout_scrollFlags="scroll|snap|enterAlwaysCollapsed"
+                    app:title="">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/minimal_background" />
+
+                    <androidx.appcompat.widget.Toolbar
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
+
+
+                </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+            </com.google.android.material.appbar.AppBarLayout>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnfab_options"
+                app:layout_anchor="@id/appbar_title"
+                app:layout_anchorGravity="bottom|right|end"
+                android:layout_marginEnd="32dp"
+                android:elevation="6dp"
+                android:backgroundTint="@color/colorAccent"
+                android:contentDescription="@string/btn_options"
+                android:tint="@color/colorText"
+                app:tint="@color/colorText"
+                android:src="@drawable/ic_options"
+                app:backgroundTint="@color/colorAccent"/>
+
+            <androidx.core.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:paddingTop="5dp">
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/viewPager"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent">
+
+                </androidx.viewpager2.widget.ViewPager2>
+
+            </androidx.core.widget.NestedScrollView>
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
