--- a/app/src/main/res/layout/fragment_top_traks.xml
+++ b/app/src/main/res/layout/fragment_top_traks.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.TopTraksFragment">
+    tools:context=".ui.fragment.TopTraksFragment"
+    android:id="@+id/fragment_top_tracks">
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_toptrack"
